# assimp

port/PyAssimp/: README.md  pyproject.toml  setup.py
port/PyAssimp/pyassimp/: helper.py  library_downloader.py
port/PyAssimp/pyassimp/libs/: .gitignore
